--- a/src/flmmlmonitor.mxml
+++ b/src/flmmlmonitor.mxml
@@ -264,10 +264,10 @@
 																if (autoScrollCheckBox.selected && _absoluteScrollQueue.length == 0) {
 																	var ACTIVATION_WIDTH:Number = PianoRoll.BEAT_WIDTH * 4; // 画面右端から何pixelの所をまたいだらオートスクロールするか
 																	
-																	trace("_positionXInPixel_prev = " + _positionXInPixel_prev + ", _positionXInPixel = " + _positionXInPixel);
+																	//trace("_positionXInPixel_prev = " + _positionXInPixel_prev + ", _positionXInPixel = " + _positionXInPixel);
+																	var autoScrollPoint:Number = pianorollSprite.scrollRect.x + pianorollSprite.width - ACTIVATION_WIDTH;
 																	// 再生位置バーが画面右端から ACTIVATION_WIDTH pixel の地点をまたいだらオートスクロール
-																	if (_positionXInPixel_prev < pianorollSprite.scrollRect.x + pianorollSprite.width - ACTIVATION_WIDTH
-																		&& pianorollSprite.scrollRect.x + pianorollSprite.width - ACTIVATION_WIDTH <= _positionXInPixel) { // 再生位置バーが画面右端から ACTIVATION_WIDTH pixel の地点にピッタリ到達してしまう場合に対処して「<」ではなく「<=」にしておく
+																	if (_positionXInPixel_prev < autoScrollPoint && autoScrollPoint <= _positionXInPixel) { // 再生位置バーが画面右端から ACTIVATION_WIDTH pixel の地点にピッタリ到達してしまう場合に対処して後者は「<」ではなく「<=」にしておく
 																		//trace("stepped over");
 																		
 																		var DURATION_IN_FRAME:Number = 60.0; // 何フレームで動かすか
