--- a/src/flmmlmonitor.mxml
+++ b/src/flmmlmonitor.mxml
@@ -326,60 +326,60 @@
 												pianorollSprite.dispatchEvent(new Event(Event.SCROLL)); // Event.SCROLL イベントを dispatch
 											}
 										}
-										{ // 再生位置バーとノートの交点を描画
+										{ // 再生位置バーとノートの交点のインジケータを描画
 											pianorollSprite.intersectionIndicatorLayer_ref.graphics.clear();
-											if(_pianoRollItemArrArr_ref != null){ // 各トラックのノートとの交点を計算して表示
-												var colorSet:ColorSet = new ColorSet();
-												
-												len2 = _pianoRollItemArrArr_ref.length;
-												//trace(_pianoRollItemArrArr_ref);
-												for (j = 1 ; j < len2 ; j++ ) { // 0トラック目（テンポトラック）は無視
-													colorSet.h = ((240-(-45))/*←青スタート。0トラック目がテンポトラックであることに注意して1ステップ分の色相変位を引いておく*/ + ((-45)/*←8ステップで色相を1周するように1ステップあたりの色相変位を設定。また、色相を「青→水色→黄緑→黄→橙→赤→紫」という風に逆順に辿るため負の値を設定*/*j)) % 360; // 色相（hue）
-													colorSet.s = 100; // 彩度（saturation）
-													colorSet.v = 80; // 明度（value）
+											// 再生中かポーズ中のときのみインジケータを表示
+											if (_sequencer_ref.isPlaying() || _sequencer_ref.isPaused()) {
+												if(_pianoRollItemArrArr_ref != null){ // 各トラックのノートとの交点を計算して表示
+													var colorSet:ColorSet = new ColorSet();
 													
-													pianorollSprite.intersectionIndicatorLayer_ref.graphics.beginFill(colorSet.c, 0.5);
-													pianorollSprite.intersectionIndicatorLayer_ref.graphics.lineStyle(2.0, 0x000000, 0.5);
-													{ // 再生位置バーとノートの交点にインジケータを描画
-														var pitchOfNoteAtSpecificTick:Number; // あるトラックの、ある再生位置[tick]におけるノートの音高
-														var volumeOfNoteAtSpecificTick:Number; // あるトラックの、ある再生位置[tick]におけるノートの音量（min=0.0, max=1.0）
-														{ // あるトラックの、ある再生位置[tick]におけるノートの音高を計算
-															pitchOfNoteAtSpecificTick = Number.NEGATIVE_INFINITY; // あるtickにおいて鳴っているノートがなかったら Number.NEGATIVE_INFINITY を入れておく
-															volumeOfNoteAtSpecificTick = 0.0; // あるtickにおいて鳴っているノートがなかったら 0.0 を入れておく
-															{ // MEvent インスタンスを順次走査
-																// TODO: 二分探索を用いて処理を高速化する
-																len = _pianoRollItemArrArr_ref[j].length;
-																for (i = 0 ; i < len ; i++ ) { 
-																	var item2:PianoRollItem = _pianoRollItemArrArr_ref[j][i];
-																	
-																	if (item2.startPosInTick < positionXInTick && positionXInTick <= item2.endPosInTick) {
-																		// あるトラックの、ある再生位置[tick]におけるノートが確定したら、そのノートの音高を代入
-																		pitchOfNoteAtSpecificTick = item2.startPitch;
-																		volumeOfNoteAtSpecificTick = Number(item2.velocity) / 127.0;
-																	}else{
-																		continue;
+													len2 = _pianoRollItemArrArr_ref.length;
+													//trace(_pianoRollItemArrArr_ref);
+													for (j = 1 ; j < len2 ; j++ ) { // 0トラック目（テンポトラック）は無視
+														colorSet.h = ((240-(-45))/*←青スタート。0トラック目がテンポトラックであることに注意して1ステップ分の色相変位を引いておく*/ + ((-45)/*←8ステップで色相を1周するように1ステップあたりの色相変位を設定。また、色相を「青→水色→黄緑→黄→橙→赤→紫」という風に逆順に辿るため負の値を設定*/*j)) % 360; // 色相（hue）
+														colorSet.s = 100; // 彩度（saturation）
+														colorSet.v = 80; // 明度（value）
+														
+														pianorollSprite.intersectionIndicatorLayer_ref.graphics.beginFill(colorSet.c, 0.5);
+														pianorollSprite.intersectionIndicatorLayer_ref.graphics.lineStyle(2.0, 0x000000, 0.5);
+														{ // 再生位置バーとノートの交点にインジケータを描画
+															var pitchOfNoteAtSpecificTick:Number; // あるトラックの、ある再生位置[tick]におけるノートの音高
+															var volumeOfNoteAtSpecificTick:Number; // あるトラックの、ある再生位置[tick]におけるノートの音量（min=0.0, max=1.0）
+															{ // あるトラックの、ある再生位置[tick]におけるノートの音高を計算
+																pitchOfNoteAtSpecificTick = Number.NEGATIVE_INFINITY; // あるtickにおいて鳴っているノートがなかったら Number.NEGATIVE_INFINITY を入れておく
+																volumeOfNoteAtSpecificTick = 0.0; // あるtickにおいて鳴っているノートがなかったら 0.0 を入れておく
+																{ // MEvent インスタンスを順次走査
+																	// TODO: 二分探索を用いて処理を高速化する
+																	len = _pianoRollItemArrArr_ref[j].length;
+																	for (i = 0 ; i < len ; i++ ) { 
+																		var item2:PianoRollItem = _pianoRollItemArrArr_ref[j][i];
+																		
+																		if (item2.startPosInTick < positionXInTick && positionXInTick <= item2.endPosInTick) {
+																			// あるトラックの、ある再生位置[tick]におけるノートが確定したら、そのノートの音高を代入
+																			pitchOfNoteAtSpecificTick = item2.startPitch;
+																			volumeOfNoteAtSpecificTick = Number(item2.velocity) / 127.0;
+																		}else{
+																			continue;
+																		}
 																	}
 																}
 															}
+															
+															// インジケータを描画
+															if (volumeOfNoteAtSpecificTick <= 0.0) { continue; } // 音量が0以下の場合はインジケータを描画しようとしない
+															pianorollSprite.intersectionIndicatorLayer_ref.graphics.drawCircle(
+																Number(PianoRoll.BEAT_WIDTH) * (positionXInTick / 96.0),
+																PianoRoll.PIANOROLL_HEIGHT - PianoRoll.SEMITONE_HEIGHT * (pitchOfNoteAtSpecificTick / 100.0),
+																// 数値的な音の大きさではなく心理的な音の大きさを図示したいので、対数を取っておく。
+																// TODO: MEvent.VOL_MODE （音量モードの線形/非線形を切り替えるイベント）に対応する
+																// volume が0.001未満の場合は0.001扱いとする。
+																4.0/*<-このパラメータで大きさを調整*/ * (Math.log(Math.max(0.001, volumeOfNoteAtSpecificTick)) + 3.0)
+																);
 														}
-														
-														// インジケータを描画
-														if (volumeOfNoteAtSpecificTick <= 0.0) { continue; } // 音量が0以下の場合はインジケータを描画しようとしない
-														pianorollSprite.intersectionIndicatorLayer_ref.graphics.drawCircle(
-															Number(PianoRoll.BEAT_WIDTH) * (positionXInTick / 96.0),
-															PianoRoll.PIANOROLL_HEIGHT - PianoRoll.SEMITONE_HEIGHT * (pitchOfNoteAtSpecificTick / 100.0),
-															// 数値的な音の大きさではなく心理的な音の大きさを図示したいので、対数を取っておく。
-															// TODO: MEvent.VOL_MODE （音量モードの線形/非線形を切り替えるイベント）に対応する
-															// volume が0.001未満の場合は0.001扱いとする。
-															4.0/*<-このパラメータで大きさを調整*/ * (Math.log(Math.max(0.001, volumeOfNoteAtSpecificTick)) + 3.0)
-															);
+														pianorollSprite.intersectionIndicatorLayer_ref.graphics.endFill();
 													}
-													pianorollSprite.intersectionIndicatorLayer_ref.graphics.endFill();
 												}
 											}
-											//with (pianorollSprite.intersectionIndicatorLayer_ref.graphics) {
-											//
-											//}
 										}
 									});
 									pianorollSprite.addEventListener(Event.SCROLL, function(e:Event):void { // pianorollSprite.scrollRect が変化したときに呼ばれるハンドラ
